<resources>
    <string name="app_name">E-CommerceApp</string>
    <string name="find_your_coffee">Find Your Coffee</string>
    <string name="get_started">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="elipse">elipse</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="espresso">Espresso</string>
    <string name="todo">TODO</string>
    <string name="a">a</string>
    <string name="signup">SignUp</string>
    <string name="name">name</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">confirm</string>
    <string name="coffeeitem">Coffee Item</string>
    <string name="_30_dollars">30 Dollars</string>
    <string name="_13">13</string>
    <string name="size">size</string>
    <string name="sugar">Sugar</string>
    <string name="cupsmall">cupSmall</string>
    <string name="cupmedium">cupMedium</string>
    <string name="cuplarge">cupLarge</string>
    <string name="sugar_value">M135.7,113.39c-0.19,-1.01 -0.51,-2.01 -0.9,-2.96c-0.4,-0.96 -0.89,-1.88 -1.46,-2.74c-0.57,-0.87 -1.23,-1.68 -1.96,-2.4s-1.53,-1.39 -2.4,-1.96c-0.85,-0.57 -1.77,-1.06 -2.72,-1.46c-0.96,-0.4 -1.96,-0.71 -2.97,-0.9c-5.12,-1.04 -10.6,0.65 -14.27,4.32c-0.73,0.73 -1.39,1.53 -1.96,2.4c-0.57,0.85 -1.06,1.77 -1.46,2.74c-0.4,0.95 -0.7,1.95 -0.9,2.96c-0.21,1.01 -0.32,2.06 -0.32,3.08c0,1.03 0.11,2.07 0.32,3.08c0.21,1.01 0.51,2.01 0.9,2.96c0.4,0.96 0.89,1.88 1.46,2.74c0.57,0.87 1.23,1.68 1.96,2.4c2.94,2.94 7.02,4.63 11.18,4.63c1.03,0 2.07,-0.11 3.08,-0.32c1.01,-0.19 2.01,-0.51 2.97,-0.9c0.95,-0.4 1.87,-0.89 2.72,-1.46c0.87,-0.57 1.68,-1.23 2.4,-1.96c0.73,-0.73 1.39,-1.53 1.96,-2.4c0.57,-0.85 1.06,-1.77 1.46,-2.74c0.4,-0.95 0.71,-1.95 0.9,-2.96c0.21,-1.01 0.32,-2.06 0.32,-3.08S135.91,114.4 135.7,113.39z</string>
    <string name="sugar_3">M135.7,113.39c-0.19,-1.01 -0.51,-2.01 -0.9,-2.96c-0.4,-0.96 -0.89,-1.88 -1.46,-2.74c-0.57,-0.87 -1.23,-1.68 -1.96,-2.4s-1.53,-1.39 -2.4,-1.96c-0.85,-0.57 -1.77,-1.06 -2.72,-1.46c-0.96,-0.4 -1.96,-0.71 -2.97,-0.9c-5.12,-1.04 -10.6,0.65 -14.27,4.32c-0.73,0.73 -1.39,1.53 -1.96,2.4c-0.57,0.85 -1.06,1.77 -1.46,2.74c-0.4,0.95 -0.7,1.95 -0.9,2.96c-0.21,1.01 -0.32,2.06 -0.32,3.08c0,1.03 0.11,2.07 0.32,3.08c0.21,1.01 0.51,2.01 0.9,2.96c0.4,0.96 0.89,1.88 1.46,2.74c0.57,0.87 1.23,1.68 1.96,2.4c2.94,2.94 7.02,4.63 11.18,4.63c1.03,0 2.07,-0.11 3.08,-0.32c1.01,-0.19 2.01,-0.51 2.97,-0.9c0.95,-0.4 1.87,-0.89 2.72,-1.46c0.87,-0.57 1.68,-1.23 2.4,-1.96c0.73,-0.73 1.39,-1.53 1.96,-2.4c0.57,-0.85 1.06,-1.77 1.46,-2.74c0.4,-0.95 0.71,-1.95 0.9,-2.96c0.21,-1.01 0.32,-2.06 0.32,-3.08S135.91,114.4 135.7,113.39z</string>
    <string name="total">Total</string>
    <string name="add_to_cart">Add To Cart</string>

</resources>