<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="coffee"
            type="com.example.e_commerceapp.entities.Coffee" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.CoffeeDetailsFragment">

        <ImageView
            android:layout_width="337dp"
            android:layout_height="138dp"

            android:contentDescription="@string/coffeeitem"
            android:src="@drawable/ic_baseline_coffee_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <TextView
            android:layout_width="120dp"
            android:layout_height="33dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/espresso"
            android:id="@+id/coffeeDetailsName"
            android:textColor="@color/black"
            android:textFontWeight="800"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/coffeeDetailsPrice"
            app:layout_constraintEnd_toStartOf="@+id/coffeeDetailsQuantity"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.0">

        </TextView>

        <TextView
            android:id="@+id/coffeeDetailsPrice"
            android:layout_width="120dp"
            android:layout_height="33dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif"

            android:gravity="center"
            android:text="@string/_30_dollars"
            android:textColor="@color/black"
            android:textFontWeight="800"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toStartOf="@+id/coffeeDetailsQuantity"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5">

        </TextView>

        <TextView
            android:id="@+id/coffeeDetailsQuantity"
            android:layout_width="58dp"
            android:layout_height="38dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/_13"
            android:textColor="@color/black"
            android:textFontWeight="800"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toStartOf="@+id/addDetailsCoffee"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.0">

        </TextView>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/addDetailsCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toStartOf="@+id/removeDetailsCoffee"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.518">

        </androidx.appcompat.widget.AppCompatImageButton>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/removeDetailsCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_baseline_remove_24"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.518">

        </androidx.appcompat.widget.AppCompatImageButton>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="155dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="34dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="365dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="448dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="554dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="252dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>